@@ -27,10 +27,10 @@ fi
 
 input=modules/openapi-generator/src/test/resources/2_0/petstore-with-fake-endpoints-models-for-testing.yaml
 out_folder=samples/server/petstore/php-ze-ph
-resources=modules/openapi-generator/src/main/resources/ze-ph
+resources=modules/openapi-generator/src/main/resources/php-ze-ph
 
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
 ags="generate -t $resources -i $input -g php-ze-ph -o $out_folder $@"
 
 java $JAVA_OPTS -jar $executable $ags
